...
    <string name="age">Age</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="error_name">Please enter the Name</string>
    <string name="error_age">Please enter a valid Age</string>
    <string name="no_image">No image taken. Please take a photo.</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="pin_hint" translatable="false">PIN</string>
    <string name="pin_value" translatable="false">0000</string>
    <string name="setup_household_first_use_prompt">Click the plus button to add a new household member.</string>
    <string name="setup_household_first_use_prompt_title">Add Household member</string>
    <string name="food_item_added">Food Item Added</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_gender">Select a Gender</string>
...
    <string name="plus">+</string>
    <string name="householdid">Household ID</string>
    <string name="participantid">Participant ID</string>
    <string name="finalize_eo_notification_channel_name">Finalise Eating Occasion</string>
    <string name="finalize_eo_notification_channel_description">Notification to remind user to finalise eating occasions.</string>
    <string name="whattime"><u>Time you would like to finalise your day:\u0020</u> </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tick">\u2714</string>
    <string name="cross">\u2716</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="finalize">Finalise</string>
    <string name="recipes">Recipes</string>
...
    <string name="hmnotbreastfed">Household member is not breastfed.</string>
    <string name="noeatingoccasions">No eating occasions to finalise.</string>
    <string name="breastfeedcaptured">Breastfeed occasion captured.</string>
    <string name="meal">Shared Plate</string>
    <string name="snack">Own Plate</string>
    <string name="eatanymore">The images above show what you ate throughout today. Did you eat anything else today?</string>
    <string name="review_your_day">Review your day:</string>
    <string name="dishes">Shared Dishes</string>
    <string name="addDish">Add Dish</string>
    <string name="mealrecorded">Meal Recorded</string>
    <string name="ate">Ate</string>
    <string name="leftover_prompt">Are there any leftovers for this dish?</string>
    <string name="NO_PHOTO" translatable="false">NO_IMAGE</string>
...
