<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/notification_list"
        android:title="@string/title_notifications"
        android:icon="@drawable/ic_notifications"
        app:actionLayout="@layout/notification_badge_layout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_manage"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="300"
        app:showAsAction="always" />

</menu>